# DreaminaMonitor

./: .gitignore  Dockerfile  README.md  api.py  config.py  database.py  docker-compose.yml  main.py  proxy.py  pyproject.toml
.github/workflows/: docker-build.yml
static/: index.html
